--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    fail-fast: false
     strategy:
       matrix:
         node-version: [14.x, 16.x]
