--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,13 @@ name: Test across NodeJS versions
 
 on:
   push:
+    paths:
+      - '!.*'
+      - '!*.code-workspace'
+      - '!*.md'
+      - '**/*'
+      - '!.github/**/*'
+      - '.github/workflows/test.yml'
     branches:
       - main
   pull_request:
