--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@types/q": "^1.5.5",
     "@types/triple-beam": "^1.3.2",
     "@types/underscore": "^1.11.3",
+    "cross-fetch": "^3.1.4",
     "follow-redirects": "^1.14.1",
     "graphql": "^15.5.1",
+    "keyv": "^4.0.3",
     "mongoose": "^5.13.3",
     "q": "^1.5.1",
     "steam-user": "^4.19.12",
