--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "types/*.d.ts"
   ],
   "scripts": {
-    "test": "npm run build && nyc --reporter=clover --reporter=text --all jest",
+    "test": "npm run build && jest",
     "build": "tsc",
     "build:check": "tsc --noEmit",
     "lint": "ts-standard --fix",
@@ -30,6 +30,14 @@
   "bugs": {
     "url": "https://github.com/Kards-Stats/kards-tools/issues"
   },
+  "transform": {
+    "\\.[jt]sx?$": "babel-jest"
+  },
+  "moduleFileExtensions": [
+    "js",
+    "ts",
+    "tsx"
+  ],
   "homepage": "https://github.com/Kards-Stats/kards-tools#readme",
   "ts-standard": {
     "ignore": [
@@ -62,12 +70,9 @@
     "@graphql-codegen/core": "^1.17.10",
     "@graphql-codegen/typescript": "^1.23.0",
     "@types/jest": "^26.0.24",
-    "@types/rewire": "^2.5.28",
     "env-cmd": "^10.1.0",
     "jest": "^27.0.6",
     "mongodb-memory-server": "^7.3.0",
-    "nyc": "^15.1.0",
-    "rewire": "^5.0.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.1.0"
   }
