--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
         "files": true
     },
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "ESNext",
         "module": "commonjs",
         "allowJs": true,
         "outDir": "./build",
         "removeComments": false,
+        "isolatedModules": false,
+        "emitDeclarationOnly": true,
         "sourceMap": true,
         "inlineSourceMap": false,
         "inlineSources": false,
@@ -16,6 +18,7 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
+        "allowSyntheticDefaultImports": true,
         "moduleResolution": "node",
         "esModuleInterop": true,
         "resolveJsonModule": true,
