--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,8 @@ jobs:
         node-version: ${{ matrix['node-version'] }}
         cache: 'npm'
     - run: npm ci
-    - run: echo '${{ secrets.TEST_STEAM_ACCOUNTS }}'
+    - run: echo '${{ secrets.TEST_STEAM_ACCOUNTS }}' > ./tests/kards/users.json
+    - run: cat ./tests/kards/users.json
     # - run: npm run build --if-present
     # - run: npm test
     - uses: codecov/codecov-action@v2
