--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,14 @@ jobs:
         node-version: ${{ matrix['node-version'] }}
         cache: 'npm'
     - run: npm ci
-    - run: echo '${{ secrets.TEST_STEAM_ACCOUNTS }}' > ./tests/kards/users.json
-    - run: cat ./tests/kards/users.json
+    - name: create-json
+      id: create-json
+      uses: jsdaniell/create-json@1.1.2
+      with:
+        name: "users.json"
+        json: ${{ secrets.TEST_STEAM_ACCOUNTS }}
+        dir: 'tests/kards/'
+    - run: 'cat tests/kards/users.json'
     # - run: npm run build --if-present
     # - run: npm test
     - uses: codecov/codecov-action@v2
