[no ci] exclude tests from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,10 @@
         "declaration": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-    }
+    },
+    "exclude": [
+        "tests/**",
+        "**/*.test.ts",
+        "**/*.ignore.ts"
+    ]
 }
