--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "exclude": [
         "tests/**",
         "**/*.test.ts",
-        "**/*.ignore.ts"
+        "**/*.ignore.ts",
+        "./build/**/*"
     ]
 }
