--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,9 @@
         "**/*.test.ts",
         "**/*.ignore.ts",
         "./build/**/*"
+    ],
+    "include": [
+        "src/**/*",
+        "types/**/*"
     ]
 }
